--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
 	<meta charset="UTF-8">
 	<title>Chew-Barka</title>
@@ -62,10 +62,6 @@
 
 <script src="js/app.module.js"></script>
 
-<script src="js/equipment/equipmentDetail.controller.js"></script>
-
-<script src="js/events/eventDetail.controller.js"></script>
-
 <script src="js/core/crud.factory.js"></script>
 
 <script src="js/core/equipment.factory.js"></script>
@@ -79,6 +75,10 @@
 <script src="js/core/medical.factory.js"></script>
 
 <script src="js/core/overview.factory.js"></script>
+
+<script src="js/equipment/equipmentDetail.controller.js"></script>
+
+<script src="js/events/eventDetail.controller.js"></script>
 
 <script src="js/extra/extraShelter.controller.js"></script>
 
