redoing the module

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Chew-Barka</title>
 <!--CSSPackages-->
-<!-- <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
+<!-- <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" /> -->
 <link rel="stylesheet" href="bower_components/foundation-sites/dist/foundation.css" />
-<link rel="stylesheet" href="bower_components/toastr/toastr.css" /> -->
+<!-- <link rel="stylesheet" href="bower_components/toastr/toastr.css" /> -->
 <!--endcss-->
 
 <!--CustomCSS-->
@@ -62,6 +62,10 @@
 
 <script src="js/app.module.js"></script>
 
+<script src="js/equipment/equipment.controller.js"></script>
+
+<script src="js/events/events.controller.js"></script>
+
 <script src="js/core/crud.factory.js"></script>
 
 <script src="js/core/equipment.factory.js"></script>
@@ -76,19 +80,17 @@
 
 <script src="js/core/overview.factory.js"></script>
 
-<script src="js/equipment/equipmentDetail.controller.js"></script>
-
-<script src="js/events/eventDetail.controller.js"></script>
-
 <script src="js/extra/extraShelter.controller.js"></script>
 
 <script src="js/login/login.controller.js"></script>
 
-<script src="js/medical/medicalDocuments.controller.js"></script>
+<script src="js/medical/medical.controller.js"></script>
 
-<script src="js/overview/overviewInfo.controller.js"></script>
+<script src="js/overview/overview.controller.js"></script>
 
-<script src="js/parks/parksForDogs.controller.js"></script>
+<script src="js/parks/parks.controller.js"></script>
+
+<script src="js/photos/photo.controller.js"></script>
 
 <!--endinject-->
 <!--endanglarjs-->
