--- a/src/js/login/login.html
+++ b/src/js/login/login.html
@@ -1,3 +1,50 @@
-<div class=container>
-	<h3>This is the Login Page!</h3>
+<div class="large-3 large-centered columns">
+  <div class="login-box">
+  <div class="row">
+  <div class="large-12 columns">
+    <form>
+       <div class="row">
+         <div class="large-12 columns">
+             <input type="text" name="username" placeholder="Username" />
+         </div>
+       </div>
+      <div class="row">
+         <div class="large-12 columns">
+             <input type="password" name="password" placeholder="Password" />
+         </div>
+      </div>
+      <div class="row">
+        <div class="large-12 large-centered columns">
+          <input type="submit" class="button expand" value="Log In"/>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
+</div>
+</div>
+
+<!-- <div id="loginBackground">
+    <div class="columns">
+        <div class="container column is-one-third loginBox">
+            <div class="content is-medium">
+                <h1>Login</h1>
+            </div>
+            <form ng-submit="login.loginAdmin(login.loginInfo)">
+                <p class="control has-icon">
+                    <input class="input is-large" type="email" placeholder="Email" ng-model="login.loginInfo.email">
+                    <i class="fa fa-envelope"></i>
+                </p>
+                <p class="control has-icon">
+                    <input class="input is-large" type="password" placeholder="Password" ng-model="login.loginInfo.password">
+                    <i class="fa fa-lock"></i>
+                </p>
+                <p class="control">
+                    <button class="button is-medium login-button" ng-click="login.loginAdmin();">
+                        Login <i class="icons fa fa-check login-button-icon"></i>
+                    </button>
+                </p>
+            </form>
+        </div>
+    </div>
+ -->
