--- a/src/js/login/login.html
+++ b/src/js/login/login.html
@@ -1,27 +1,27 @@
 <div class="large-3 large-centered columns">
   <div class="login-box">
-  <div class="row">
-  <div class="large-12 columns">
-    <form>
-       <div class="row">
-         <div class="large-12 columns">
-             <input type="text" name="username" placeholder="Username" />
-         </div>
-       </div>
-      <div class="row">
-         <div class="large-12 columns">
-             <input type="password" name="password" placeholder="Password" />
-         </div>
+    <div class="row">
+      <div class="large-12 columns">
+        <form ng-submit="login.fakeLogin(login.loginInfo)">
+          <div class="row">
+            <div class="large-12 columns">
+              <input type="text" name="username" placeholder="email" ng-model="login.loginInfo.email"/>
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-12 columns">
+              <input type="password" name="password" placeholder="Password" ng-model="login.loginInfo.password" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-12 large-centered columns">
+              <input type="submit" class="button expand" value="Log In" ng-click="login.fakeLogin()"/>
+            </div>
+          </div>
+        </form>
       </div>
-      <div class="row">
-        <div class="large-12 large-centered columns">
-          <input type="submit" class="button expand" value="Log In"/>
-        </div>
-      </div>
-    </form>
+    </div>
   </div>
-</div>
-</div>
 </div>
 
 <!-- <div id="loginBackground">
