working on login authorization and authentication

--- a/src/index.html
+++ b/src/index.html
@@ -62,10 +62,6 @@
 
 <script src="js/app.module.js"></script>
 
-<script src="js/events/events.controller.js"></script>
-
-<script src="js/equipment/equipment.controller.js"></script>
-
 <script src="js/core/crud.factory.js"></script>
 
 <script src="js/core/equipment.factory.js"></script>
@@ -74,19 +70,25 @@
 
 <script src="js/core/extra.factory.js"></script>
 
+<script src="js/core/family.factory.js"></script>
+
 <script src="js/core/login.factory.js"></script>
 
 <script src="js/core/medical.factory.js"></script>
 
 <script src="js/core/overview.factory.js"></script>
 
+<script src="js/events/events.controller.js"></script>
+
+<script src="js/equipment/equipment.controller.js"></script>
+
 <script src="js/extra/extraShelter.controller.js"></script>
 
 <script src="js/login/login.controller.js"></script>
 
-<script src="js/overview/overview.controller.js"></script>
-
 <script src="js/medical/medical.controller.js"></script>
+
+<script src="js/overview/overview.controller.js"></script>
 
 <script src="js/parks/parks.controller.js"></script>
 
