--- a/src/index.html
+++ b/src/index.html
@@ -56,11 +56,14 @@
 <script src="bower_components/foundation-sites/dist/foundation.js"></script>
 <script src="bower_components/toastr/toastr.js"></script>
 <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+<script src="bower_components/underscore/underscore.js"></script>
 <!--endbower-->
 
 <!--inject:js-->
 
 <script src="js/app.module.js"></script>
+
+<script src="js/equipment/equipment.controller.js"></script>
 
 <script src="js/core/crud.factory.js"></script>
 
@@ -76,7 +79,7 @@
 
 <script src="js/core/overview.factory.js"></script>
 
-<script src="js/equipment/equipment.controller.js"></script>
+<script src="js/core/pup.factory.js"></script>
 
 <script src="js/events/events.controller.js"></script>
 
