--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app">
+<html lang="en" ng-app="app" ui-router-styles>
 <head>
 	<meta charset="UTF-8">
 	<title>Chew-Barka</title>
@@ -18,35 +18,55 @@
 <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
 <!--endbower-->
 <!--inject:css-->
+<link rel="stylesheet" href="js/login/login.css">
+<link rel="stylesheet" href="style/main.css">
 <!--endinject-->
 
 
 
 </head>
 <body>
-	<nav class="nav">
+	<!-- <nav class="nav">
 		<div class="nav-left">
 			<a class="nav-item is-brand" href="#">Chew-Barka</a>
 		</div>
 		<span class="nav-toggle">
 			<a></a>
 		</span>
-	</nav>
+	</nav> -->
+
+  <div id="mySidenav" class="sidenav">
+	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	  <a href="#">Home</a>
+	  <a href="#">Events</a>
+	  <a href="#">Parks</a>
+	  <a href="#">photos</a>
+	  <a href="#">Equipment</a>
+	  <a href="#">Extra</a>
+	  <a href="#">About Us</a>
+  </div>
+ 
+  
+  <h2>ChewBarka</h2>
+<div id="main">
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+</div>
+
+	
 <!--LazyLoad-->
 	<main>
 		<div ui-view></div>
 	</main>
 <!--endlazyload-->
-
-<footer class="footer">
-	<div class="container">
-		<div class="content">
-			<p>
-				<strong>ChewBarka Creators:</strong> Cole Logan and Herberto Basulto
-			</p>
+	<footer class="footer">
+		<div class="container">
+			<div class="content">
+				<p>
+					<strong>ChewBarka Creators:</strong> Cole Logan and Herberto Basulto
+				</p>
+			</div>
 		</div>
-	</div>
-</footer>
+	</footer>
 
 <!--bower:js-->
 <script src="bower_components/angular/angular.js"></script>
@@ -57,13 +77,12 @@
 <script src="bower_components/toastr/toastr.js"></script>
 <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
+<script src="bower_components/angular-ui-router-styles/ui-router-styles.js"></script>
 <!--endbower-->
 
 <!--inject:js-->
 
 <script src="js/app.module.js"></script>
-
-<script src="js/equipment/equipment.controller.js"></script>
 
 <script src="js/core/crud.factory.js"></script>
 
@@ -81,6 +100,8 @@
 
 <script src="js/core/pup.factory.js"></script>
 
+<script src="js/equipment/equipment.controller.js"></script>
+
 <script src="js/events/events.controller.js"></script>
 
 <script src="js/extra/extraShelter.controller.js"></script>
@@ -94,6 +115,8 @@
 <script src="js/parks/parks.controller.js"></script>
 
 <script src="js/photos/photo.controller.js"></script>
+
+<script src="style/main.js"></script>
 
 <!--endinject-->
 <!--endanglarjs-->
