Connected More States

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
 
 <script src="js/app.module.js"></script>
 
-<script src="js/equipment/equipment.controller.js"></script>
+<script src="js/addPup/addPup.controller.js"></script>
 
 <script src="js/core/crud.factory.js"></script>
 
@@ -73,6 +73,8 @@
 
 <script src="js/core/extra.factory.js"></script>
 
+<script src="js/core/family.factory.js"></script>
+
 <script src="js/core/login.factory.js"></script>
 
 <script src="js/core/medical.factory.js"></script>
@@ -80,6 +82,8 @@
 <script src="js/core/overview.factory.js"></script>
 
 <script src="js/core/pup.factory.js"></script>
+
+<script src="js/equipment/equipment.controller.js"></script>
 
 <script src="js/events/events.controller.js"></script>
 
@@ -94,6 +98,8 @@
 <script src="js/parks/parks.controller.js"></script>
 
 <script src="js/photos/photo.controller.js"></script>
+
+<script src="js/pupInfo/pupInfo.controller.js"></script>
 
 <!--endinject-->
 <!--endanglarjs-->
