--- a/src/js/overview/overview.html
+++ b/src/js/overview/overview.html
@@ -1,24 +1,50 @@
 <div class="contianer">
 	<div>
+		<label><h4>OWNER'S Information</h4></label>
 		<p>First Name: {{overview.owner.firstName}}</p>
 		<p>Last Name: {{overview.owner.lastName}}</p>
 		<p>Email: {{overview.owner.email}}</p>
 		<p>Zip: {{overview.owner.zipCode}}</p>
+		<p>NSR Registration Number: {{overview.owner.nsrRegistration}}</p>
+		<!-- Give the user the ability to chenge and update the next vet visit -->
 		<p>Next Vet Appoinment: {{overview.owner.nextVetVisit}}</p>
 		<br>
 	</div>
-	<div ng-repeat="pup in overview.owner.pups">
-		<p>Puppy Name: {{pup.name}}</p>
-		<p>Puppy Age: {{pup.age}}</p>
-		<br>
+
+	<table>
+		<thead>
+			<th>PUP Information</th>
+		</thead>
+		<tbody>
+			<tr ng-repeat="pup in overview.owner.pups">
+				<td>Puppy's Name: {{pup.name}}</td>
+				<!-- <td>Puppy's Age: {{pup.age}}</td> -->
+				<!-- <td>Allergies: {{pup.allergies}}</td> -->
+				<td>Puppy's Birthday: {{pup.birthdate | date}}</td>
+				<td>Puppy's Chip Information: {{pup.chipInformation}}</td>
+				<!-- <td>Puppy's Color: {{pup.color}}</td> -->
+				<!-- <td>Medical Conditions: {{pup.medConditions}}</td> -->
+				<!-- <td>Puppy Size: {{pup.size}}</td> -->
+				<!-- <td>Puppy's Weight: {{pup.weight}}</td> -->
+				<td><button ui-sref="pupInfo({_id: pup._id})">PUP'S INFO</button></td>
+			</tr>
+			<tr>
+				<td><button ng-click="overview.addPup()"><strong>Add a Pup</strong></button></td>
+			</tr>
+		</tbody>
+	</table>
+		
+	<div>
+		<label class='label'>Enter New Task</label>
+		<input type="text" ng-model="overview.newTodo.task">
+		<label class='label'>When is it Due</label>
+		<input type="text" ng-model="overview.newTodo.date">
+		<button ng-click="overview.addTodo(overview.newTodo)"><h4>Add new task<h4></button>
 	</div>
+	<br>
 	<div ng-repeat="task in overview.owner.todo">
-		<p>Task Date: {{task.date | date}}</p>
+		<p>Due Date: {{task.date | date}}</p>
 		<p>Task: {{task.task}}</p>
 		<br>
 	</div>
-	<div>
-		
-	</div>
-
 </div>
