--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Chew-Barka</title>
+
 <!--CSSPackages-->
 <!-- <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" /> -->
 <link rel="stylesheet" href="bower_components/foundation-sites/dist/foundation.css" />
@@ -10,7 +11,6 @@
 <!--endcss-->
 
 <!--CustomCSS-->
-
 <!--endcustom-->
 
 <!--bower:css-->
@@ -19,21 +19,11 @@
 <!--endbower-->
 <!--inject:css-->
 <link rel="stylesheet" href="js/login/login.css">
-<link rel="stylesheet" href="style/main.css">
 <!--endinject-->
-
-
+<link rel="stylesheet" href="style/main.css">
 
 </head>
 <body>
-	<!-- <nav class="nav">
-		<div class="nav-left">
-			<a class="nav-item is-brand" href="#">Chew-Barka</a>
-		</div>
-		<span class="nav-toggle">
-			<a></a>
-		</span>
-	</nav> -->
 
   <div id="mySidenav" class="sidenav">
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -122,9 +112,9 @@
 
 <script src="js/pupInfo/pupInfo.controller.js"></script>
 
-<script src="style/main.js"></script>
-
 <!--endinject-->
+
+<<script src="style/main.js"></script>
 <!--endanglarjs-->
 </body>
 </html>
