todo edit in use

--- a/src/js/events/events.html
+++ b/src/js/events/events.html
@@ -1,3 +1,5 @@
 <div class="container">
-	<h1>This is the events detail page! </h1>
+	<div ng-repeat="event in events.events">
+		<p>{{event.event}}</p>
+	</div>
 </div>
