--- a/src/js/addPup/addPup.html
+++ b/src/js/addPup/addPup.html
@@ -42,7 +42,7 @@
 			<input class="input" type="text" ng-model="pup.newPup.medications">
 		</div>
 		<div>
-			<button ng-click="pup.addPup(pup.newPup)">Add Puppy!</button> 
+			<button class="button success" ng-click="pup.addPup(pup.newPup)">Add Puppy!</button> 
 		</div>
 	</form>
 </div>
