Medical info added to pupInfo page

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,13 @@
 <!--endbower-->
 <!--inject:css-->
 <link rel="stylesheet" href="js/about/about.css">
+<link rel="stylesheet" href="js/addPup/addPup.css">
 <link rel="stylesheet" href="js/equipment/equipment.css">
 <link rel="stylesheet" href="js/events/events.css">
 <link rel="stylesheet" href="js/login/login.css">
 <link rel="stylesheet" href="js/parks/parks.css">
 <link rel="stylesheet" href="js/photos/photo.css">
+<link rel="stylesheet" href="js/pupInfo/pupInfo.css">
 <!--endinject-->
 <link rel="stylesheet" href="style/main.css">
 
@@ -36,7 +38,7 @@
 		  <a href="#" ng-click="nav.passId()" ui-sref="overview({_id: nav.ownerId})">Home</a>
 		  <a href="#" ng-click="nav.passId()" ui-sref="events({_id: nav.ownerId})">Events</a>
 		  <a href="#" ng-click="nav.passId()" ui-sref="parks({_id: nav.ownerId})">Parks</a>
-		  <a href="#" ng-click="nav.passId()" ui-sref="photo({_id: nav.ownerId})">photos</a>
+		  <a href="#" ng-click="nav.passId()" ui-sref="photo({_id: nav.ownerId})">Photos</a>
 		  <a href="#" ng-click="nav.passId()" ui-sref="equipment({_id: nav.ownerId})">Equipment</a>
 		  <a href="#" ng-click="nav.passId()" ui-sref="extra.links({_id: nav.ownerId})">Extra</a>
 		  <a href="#" ng-click="nav.passId()" ui-sref="about({_id: nav.ownerId})">About Us</a>
