--- a/src/js/addPup/addPup.html
+++ b/src/js/addPup/addPup.html
@@ -41,8 +41,68 @@
 			<label class="label">Enter pups medications:</label>
 			<input class="input" type="text" ng-model="pup.newPup.medications">
 		</div>
+	</form>
+	<br>
+		
+		<!-- <form>
+			<div>Pup's Medical Information</div>
+			<div>
+				<label class="label">Last rabies shot</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.rabies">
+			</div>
+			<div>
+				<label class="label">Date: lepto shot</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.lepto">
+			</div>
+			<div>
+				<label class="label">Date: dhpp shot</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.dhpp">
+			</div>
+			<div>
+				<label class="label">Date: bordetella shot</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.bordetella">
+			</div>
+			<div>
+				<label class="label">Enter date for chip renewal</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.chipInfo">
+			</div>
+			<div>
+				<label class="label">Last heartworm shot</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.heartWorm">
+			</div>
+			<div>
+				<label class="label">Last flea prevention</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.fleaPrevention">
+			</div>
+			<div>
+				<label class="label">Last fecal check, change this lol</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.fecal">
+			</div>
+			<div>
+				<label class="label">Last blood/urine test</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.bloodUrine">
+			</div>
+			<div>
+				<label class="label">Enter date for next vet visit</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.nextVisit">
+			</div>
+			<div>
+				<label class="label">Last dental exam</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.dentalExam">
+			</div>
+			<div>
+				<label class="label">Last rattlesnake training</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.rattleSnakeTraining">
+			</div>
+			<div>
+				 Add the ability for the user to add notes here, for reminders -->
+				<!-- <label class="label">Medications: last dosage</label>
+				<input class="input" type="text" ng-model="pup.newPupMed.medications">
+			</div>
+
+		</form> -->
+
 		<div>
 			<button ng-click="pup.addPup(pup.newPup)">Add Puppy!</button> 
 		</div>
-	</form>
 </div>
